--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^10.12.2",
-    "vite": "^5.2.0"
+    "firebase": "^10.12.2"
+  },
+  "devDependencies": {
+    "vite": "^5.2.0",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.15"
   }
 }
