--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,16 @@
 [build]
-  command = "npm run build"
+  command = "npm run build" # Adjust if no build step
   publish = "public"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  
+[[headers]]
+  for = "/*.js"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+  for = "/*.css"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
