--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^10.12.2"
+    "firebase": "^10.12.2",
+    "chart.js": "^4.4.4"
   },
   "devDependencies": {
     "vite": "^5.2.0",
