--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^10.12.2",
-    "chart.js": "^4.4.4"
+    "firebase": "^10.12.2"
   },
   "devDependencies": {
     "vite": "^5.2.0",
