--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "firebase": "^10.12.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.31",
+    "vite": "^5.2.0",
     "tailwindcss": "^3.4.1",
-    "terser": "^5.43.1",
-    "vite": "^5.2.0"
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.15"
   }
 }
