--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "firebase": "^10.12.2"
+    "firebase": "^11.10.0"
   },
   "devDependencies": {
     "vite": "^5.2.0",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.15"
+    "autoprefixer": "^10.4.15",
+    "eslint": "^9.31.0"
   }
 }
